[package]
name = "maxiv-docker-browser"
version = "0.1.0"
authors = ["AntoineDupre <antoine.dupre@maxiv.lu.se>"]
edition = "2018"
description = "Maxiv docker registry browser"
license = "GPL3"
CargoLicense = "GPL3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
skim = "0.6.8"
argparse = "0.2.2"

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
maxiv-docker-browser = { path = "/usr/bin/maxiv-docker-browser" }
